--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,6 +4,6 @@
 
 .horizontal-line {
 	border: none;
-	border-top: 2px solid #f02c0f; /* Adjust color and thickness as needed */
+	border-top: 2px solid #8d0002; /* Adjust color and thickness as needed */
 	width: 100%; /* Adjust width as needed */
   }
