--- a/src/index.css
+++ b/src/index.css
@@ -17,14 +17,19 @@ body {
 	font-family: "Anton", sans-serif;
 	font-weight: 400;
 	font-style: normal;
-	color: #f02c0f;
-  }
+	color: #8d0002;
+}
 
-  .arimo-uniquifier {
+.arimo-uniquifier {
 	font-family: "Arimo", sans-serif;
-	font-optical-sizing: auto;
+	font-style: normal;
+	color: #8d0002;
+}
+
+.cherry-bomb one-regular {
+	font-family: "Cherry Bomb One", system-ui;
 	font-weight: 400;
 	font-style: normal;
-	color: #f02c0f;
+	color: #8d0002;
   }
   
